[gd_scene load_steps=9 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.992157, 0.847059, 0.537255, 0.501961 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.992157, 0.847059, 0.537255, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.992157, 0.847059, 0.537255, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="lobby" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Loading" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userNameLb" type="Label" parent="CanvasLayer/Loading"]
margin_left = 114.917
margin_top = 172.469
margin_right = 404.917
margin_bottom = 306.469
rect_scale = Vector2( 5, 5 )
text = "loading ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPanel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userNameLb" type="Label" parent="CanvasLayer/InfoPanel"]
margin_left = 266.365
margin_top = 23.0609
margin_right = 360.365
margin_bottom = 44.0609
text = "User Name :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="userName" type="LineEdit" parent="CanvasLayer/InfoPanel"]
margin_left = 363.0
margin_top = 11.2649
margin_right = 538.0
margin_bottom = 50.2649
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sentry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="CanvasLayer/InfoPanel"]
margin_left = 596.47
margin_top = 8.1192
margin_right = 709.47
margin_bottom = 47.1192
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverStart" type="Button" parent="CanvasLayer/InfoPanel"]
visible = false
margin_left = 34.3009
margin_top = 14.5244
margin_right = 250.301
margin_bottom = 50.5244
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sever to be"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputMap" type="RichTextLabel" parent="CanvasLayer/InfoPanel"]
margin_left = 396.0
margin_top = 128.0
margin_right = 527.0
margin_bottom = 188.0
custom_fonts/normal_font = SubResource( 6 )
text = "Arrow : Move
A: Throw
B: Bomb"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/InfoPanel/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/InfoPanel/serverStart" to="." method="_on_serverStart_pressed"]
